k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  namespace: devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: akashsunagar/python-app
        ports:
        - containerPort: 5000
