k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: devops
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30008
